--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - main
+      - developer
     tags:
       - 'v*'
+  workflow_dispatch:
 
 jobs:
   build-and-release:
