--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
       - developer
     tags:
       - 'v*'
+  release:
+    types: [created]
   workflow_dispatch:
 
 jobs:
@@ -38,7 +40,7 @@ jobs:
           path: dist/*.zip
 
       - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'release'
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*.zip
