--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,11 +39,17 @@ jobs:
           name: build-artifacts-debug
           path: dist/*.zip
 
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'release'
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            dist/*.zip
-          fail_on_unmatched_files: true
-          generate_release_notes: true
+      - name: Check Artifacts
+        run: |
+          echo "Listing dist directory content:"
+          ls -R dist/
+
+      - name: Release and Upload Assets
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Creating release or uploading to existing release..."
+          # Try to create release with assets. If it fails (e.g. already exists), try to upload assets.
+          gh release create ${{ github.ref_name }} dist/*.zip --generate-notes --verify-tag || \
+          gh release upload ${{ github.ref_name }} dist/*.zip --clobber
