--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,12 +12,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-release:
-    name: Build and Release
+  build:
+    name: Build Tools
     runs-on: ubuntu-latest
-    permissions:
-      contents: write  # Required for creating releases
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -33,23 +30,42 @@ jobs:
           chmod +x .github/scripts/build.sh
           .github/scripts/build.sh
 
-      - name: Upload Artifacts (Run)
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts-debug
-          path: dist/*.zip
-
       - name: Check Artifacts
         run: |
           echo "Listing dist directory content:"
           ls -R dist/
 
-      - name: Release and Upload Assets
-        if: startsWith(github.ref, 'refs/tags/')
+      # Upload each tool as a separate artifact for the next job
+      # We upload the whole dist folder to preserve the structure
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: all-tools-dist
+          path: dist/
+          retention-days: 1
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
+    steps:
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: all-tools-dist
+          path: dist
+
+      - name: Display Downloaded Files
+        run: ls -R dist/
+
+      - name: Create Release and Upload Assets
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Creating release or uploading to existing release..."
-          # Try to create release with assets. If it fails (e.g. already exists), try to upload assets.
+          # The dist directory now contains all the zip files directly
           gh release create ${{ github.ref_name }} dist/*.zip --generate-notes --verify-tag || \
           gh release upload ${{ github.ref_name }} dist/*.zip --clobber
